overflow bug fixed

--- a/webapp/finder/find/theme/styles/theme.css
+++ b/webapp/finder/find/theme/styles/theme.css
@@ -872,6 +872,18 @@ a.categorypathlink:hover,
 .entitynavsubmenu .emsubnav {
   background-color: var(--primary-color-normal);
 }
+.entity-ction-header {
+  display: flex;
+  margin-bottom: 8px;
+  padding-bottom: 8px;
+  border-bottom: 1px solid #efefef;
+}
+.entity-ction-header h3 {
+  line-height: 36px;
+}
+.entity-ction-header a {
+  border-left: 1px solid var(--themed-btn-acc-hover);
+}
 .filtered {
   font-size: 1.1rem;
   line-height: 1.1;
@@ -1861,6 +1873,7 @@ p.info {
   display: block;
   width: 100%;
   height: 100%;
+  /* max-height: 100vh; */
 }
 .col-left-library.col-left,
 .col-left-library.col-filters {
@@ -6277,6 +6290,10 @@ a.collectionbox.favorite {
   background-color: #ccc;
   color: #333;
 }
+#lightboxresults,
+#lightboxeditor {
+  max-height: calc(100% - 55px);
+}
 #lightboxeditor .dragoverselected {
   padding-left: 10px;
 }
@@ -6710,6 +6727,10 @@ a.categorypathlink {
 .searchcategories-filter .detail_categorypath {
   margin-bottom: 6px;
   font-size: 0.9rem;
+}
+.col-left #treeholder {
+  overflow: auto;
+  max-height: calc(100vh - 76px);
 }
 .col-categories .searchcategories-tree.widesidebar {
   float: left;
@@ -7442,6 +7463,7 @@ a.bg-brand-dark:hover {
   border-color: var(--themed-btn-acc);
 }
 .btn-accent:hover {
+  border-color: var(--themed-btn-acc-hover) !important;
   background-color: var(--themed-btn-acc-hover) !important;
   color: #fff;
 }
